[package]
name = "display_off"
version = "1.0.0"
edition = "2021"
authors = ["CJMAXiK <me@cjmaxik.ru>", "Manvir <webmaster@programming4life.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "lowlevelmonitorconfigurationapi",
    "winuser",
    "libloaderapi",
] }
